--- a/app/src/main/res/layout/playfield.xml
+++ b/app/src/main/res/layout/playfield.xml
@@ -45,6 +45,7 @@
         android:hint="@string/result_placeholder"
         android:inputType="number"
         android:minHeight="48dp"
+        android:singleLine="true"
         android:textAlignment="textEnd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,5 +60,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="+"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/second_number"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/first_number" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
