--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/PlayfieldFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/PlayfieldFragment"
         android:name="ar.com.drk.drkbinary.PlayfieldFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/playfield_fragment"/>
+        tools:layout="@layout/playfield_fragment">
+        <action
+            android:id="@+id/action_PlayfieldFragment_to_AboutFragment"
+            app:destination="@id/AboutFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/AboutFragment"
+        android:name="ar.com.drk.drkbinary.AboutFragment"
+        android:label="@string/about_fragment_lable"
+        tools:layout="@layout/fragment_about">
+        <action
+            android:id="@+id/action_AboutFragment_to_PlayfieldFragment"
+            app:destination="@id/PlayfieldFragment" />
+    </fragment>
 </navigation>
